[workspace]
members = [
    "savefile",
    "savefile-derive",
    "savefile-test",
    "savefile-min-build", 
    "savefile-abi-min", 
    "savefile-abi", 
    "savefile-abi-min-lib", 
    "savefile-abi-min-lib-impl"
]
exclude = ["compile_tests"]
resolver = "2"

[workspace.package]
version = "0.20.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

