[workspace]
members = [
    "savefile",
    "savefile-derive",
    "savefile-test",
    "savefile-min-build", 
    "savefile-abi-min", 
    "savefile-abi", 
    "savefile-abi-min-lib", 
    "savefile-abi-min-lib-impl"
]
exclude = ["compile_tests", "savefile_abi_example"]
resolver = "2"

[workspace.package]
version = "0.20.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

