[package]
name = "savefile-abi-min-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
savefile = { path = "../savefile", features = ["derive"], default-features = false }
savefile-abi = { path = "../savefile-abi" }
savefile-derive = {path = "../savefile-derive"}
tokio = { version = "1.40", features=["macros", "rt-multi-thread", "time"] }
tokio-util="0.7"
async-trait = "=0.1.83"