[package]
name = "savefile-abi-min"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"



[dependencies]
savefile = { path = "../savefile", features = ["derive"], default-features = false }
savefile-abi = { path = "../savefile-abi" }
byteorder = "1.4"
savefile-derive = {path = "../savefile-derive"}
savefile-abi-min-lib = { path = "../savefile-abi-min-lib" }
tokio="1.47"
