[package]
name = "savefile-abi"
version = "0.17.2"
edition = "2021"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile-abi/"
homepage = "https://github.com/avl/savefile/blob/master/savefile-abi/README.md"
repository = "https://github.com/avl/savefile"

description = "Easy to use, simple, stable ABI for Rust-libraries. Allows creating dynamically loadable plugins written in rust."

readme = "README.md"

keywords = ["dylib", "dlopen", "ffi"]

license = "MIT/Apache-2.0"

[dependencies]
savefile = { path="../savefile", version = "=0.17.2" }
savefile-derive = { path="../savefile-derive", version = "=0.17.2" }
byteorder = "1.4"
libloading = "0.8"
