[package]
name = "savefile-abi"
version = "0.18.5-beta2"
edition = "2021"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile-abi/"
homepage = "https://github.com/avl/savefile/blob/master/savefile-abi/README.md"
repository = "https://github.com/avl/savefile"
rust-version = "1.74"

description = "Easy to use, simple, stable ABI for Rust-libraries. Allows creating dynamically loadable plugins written in rust."

readme = "README.md"

keywords = ["dylib", "dlopen", "ffi"]

license = "MIT/Apache-2.0"

[dependencies]
savefile = { path="../savefile", version = "=0.18.5-beta2" }
savefile-derive = { path="../savefile-derive", version = "=0.18.5-beta2" }
byteorder = "1.4"
libloading = "0.8"

[features]
# Rust version is > 1.78
# Automatically set by build.rs
rust1_78=[]
tight = ["savefile/tight", "savefile-derive/tight"]

[dev-dependencies]
async-trait = "0.1"

[build-dependencies]
rustc_version="0.4"
