[package]
name = "savefile-abi"
version.workspace = true
edition = "2021"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile-abi/"
homepage = "https://github.com/avl/savefile/blob/master/savefile-abi/README.md"
repository = "https://github.com/avl/savefile"
rust-version = "1.74"

description = "Easy to use, simple, stable ABI for Rust-libraries. Allows creating dynamically loadable plugins written in rust."

readme = "README.md"

keywords = ["dylib", "dlopen", "ffi"]

license = "MIT/Apache-2.0"

[dependencies]
savefile = { path="../savefile", version = "=0.20.1" }
savefile-derive = { path="../savefile-derive", version = "=0.20.1" }
byteorder = "1.4"
libloading = "0.8"
bytes = {version = "1.8", optional = true }

[features]
default = ["bytes"]

[dev-dependencies]
async-trait = "0.1"

[build-dependencies]
rustc_version="0.4"
