[package]
name = "savefile-derive"
version = "0.17.0-beta.12"
authors = ["Anders Musikka <anders@andersmusikka.se>"]

description = "Custom derive macros for savefile crate - simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

[features]
default = []
nightly = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0" , features = ["full","extra-traits"]}
proc-macro2 = { version = "1.0", features = ["nightly"] }


