[package]
name = "savefile-derive"
version = "0.17.6"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
repository = "https://github.com/avl/savefile"
rust-version = "1.74"
description = "Custom derive macros for savefile crate - simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

edition = "2021"

[features]
default = []
nightly = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0" , features = ["full","extra-traits"]}
proc-macro2 = { version = "1.0", features = ["nightly"] }
proc-macro-error = "1.0"

