[package]
name = "savefile-min-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savefile = { path = "../savefile", default-features = false }
savefile-abi = { path = "../savefile-abi" }
savefile-derive = {path = "../savefile-derive"}
async-trait = "0.1.83"
