[package]
name = "savefile-min-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savefile = { path = "../savefile", default-features = false, features = ["derive"] }
savefile-abi = { path = "../savefile-abi" }
async-trait = "0.1.89"
