[package]
name = "savefile-test"
version = "0.0.1"
authors = ["Anders Musikka <anders@andersmusikka.se>"]

[features]
default = ["external_benchmarks"]
# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
external_benchmarks = []
nightly=["savefile/nightly"]

[dependencies]
savefile = { path = "../savefile", features = ["size_sanity_checks"]}
savefile-derive = { path = "../savefile-derive" }
bit-vec = "0.6"
arrayvec="0.5"
smallvec="1.0"
byteorder="*"
rand="*"
parking_lot="0.10"
serde="*"
serde_derive="*"
bincode="1.2.1"

[build-dependencies]
rustc_version="0.2"



