[package]
name = "savefile-test"
version = "0.0.1"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
resolver = "2"
[features]
default = ["external_benchmarks"]
# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
external_benchmarks = []
nightly=["savefile/nightly"]

[dependencies]
savefile = { path = "../savefile", features = ["size_sanity_checks", "encryption", "compression","bit-set","bit-vec","rustc-hash","serde_derive", "quickcheck"]}
savefile-derive = { path = "../savefile-derive", version = "=0.17.0-beta.9" }
savefile-abi = { path = "../savefile-abi" }
bit-vec = "0.6"
arrayvec="0.7"
smallvec="*"
indexmap = { version = "1.9"}
byteorder="*"
rand="0.8"
parking_lot="0.12"
serde="*"
serde_derive="*"
bincode="1.2.1"
bit-set="0.5"
rustc-hash="1.1"
quickcheck="1.0"
quickcheck_macros ="1.0"
insta = { version = "1.38.0", features = ["yaml"] }

[build-dependencies]
rustc_version="0.4"



