[package]
name = "savefile-test"
version = "0.0.1"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
resolver = "2"
edition = "2021"

[features]
default = ["external_benchmarks"]
# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
external_benchmarks = []
nightly=["savefile/nightly"]
tight=["savefile/tight", "savefile-derive/tight"]

[dependencies]
savefile = { path = "../savefile", features = ["size_sanity_checks", "encryption", "compression","bit-set","bit-vec","rustc-hash","serde_derive", "quickcheck", "nalgebra"]}
savefile-derive = { path = "../savefile-derive", version = "=0.18.5-beta2" }
savefile-abi = { path = "../savefile-abi" }
bit-vec = "0.8"
arrayvec="0.7"
smallvec="*"
indexmap = { version = "2.6"}
byteorder="*"
rand="0.8"
parking_lot="0.12"
serde="*"
serde_derive="*"
bincode="1.2.1"
bit-set="0.8"
rustc-hash="2.0"
quickcheck="1.0"
quickcheck_macros ="1.0"
insta = { version = "1.41.1", features = ["yaml"] }
nalgebra="0.33"
tokio= { version = "1.40", features = ["test-util", "rt-multi-thread", "full"] }
async-trait = "0.1"

[build-dependencies]
rustc_version="0.4"

