[package]
name = "savefile"
version = "0.17.0-pre1"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile/"
homepage = "https://github.com/avl/savefile/"
repository = "https://github.com/avl/savefile"

exclude = [
    "*.bin"
]

description = "Simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization", "introspection"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

edition = "2018"

[features]
default = ["indexmap", "arrayvec", "smallvec", "bit-vec", "parking_lot","bit-set"]
bit-set = ["dep:bit-set","bit-vec"]
serde_derive = ["dep:serde_derive","serde"]

# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
size_sanity_checks = []
# Use features only available on the nightly rust-compiler.
# Enabling this means serialization of vectors of simple types will be much faster.
# It also enables serialization of arbitrary size arrays (arbitrary size Vec always work, regardless of features)
nightly=[]

compression = ["bzip2"]

encryption = ["ring", "rand"]

derive = ["dep:savefile-derive"]

[dependencies]
bit-vec = { version = "0.6", optional = true}
arrayvec = { version = "0.7", optional = true}
smallvec = { version = "1.11", optional = true}
indexmap = { version = "1.9", optional = true}
parking_lot = { version = "0.12", optional = true }
ring = {version = "0.16.9", optional = true}
rand = { version = "0.8", optional = true}
bzip2 = {version = "0.4.4", optional = true}
bit-set = {version = "0.5", optional = true}
rustc-hash = {version = "1.1", optional = true}
memoffset = "0.9"
byteorder = "1.4"
savefile-derive = {path="../savefile-derive", version = "=0.17.0-pre1", optional = true }
serde_derive = {version= "1.0", optional = true}
serde = {version= "1.0", optional = true}
quickcheck = {version= "1.0", optional = true}

[dev-dependencies]
savefile-derive = { path="../savefile-derive", version = "=0.17.0-pre1" }

[build-dependencies]
rustc_version="0.2"



