[package]
name = "savefile"
version = "0.17.13"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile/"
homepage = "https://github.com/avl/savefile/"
repository = "https://github.com/avl/savefile"

exclude = [
    "*.bin"
]

description = "Simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization", "introspection"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

edition = "2021"

[features]
default = ["indexmap", "arrayvec", "smallvec", "bit-vec", "parking_lot","bit-set", "bit-set08", "bit-vec08"]
bit-set = ["dep:bit-set", "bit-vec"]
bit-set08 = ["dep:bit-set08", "bit-vec08"]
serde_derive = ["dep:serde_derive", "serde"]

# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
size_sanity_checks = []
# Use features only available on the nightly rust-compiler.
# Enabling this provides slightly better introspection support.
# Automatically set by build.rs for nightly compilers
nightly=[]

# Rust version is > 1.78
# Automatically set by build.rs
rust1_78=[]


compression = ["bzip2"]

encryption = ["ring", "rand"]

derive = ["dep:savefile-derive"]

[dependencies]
bit-vec = { version = "0.6", optional = true}
nalgebra = { version = "0.33", optional = true}
bit-vec08 = { package="bit-vec", version = "0.8", optional = true}
arrayvec = { version = "0.7", optional = true}
smallvec = { version = "1.11", optional = true}
indexmap = { version = "1.9", optional = true}
parking_lot = { version = "0.12", optional = true }
ring = {version = "0.16.9", optional = true}
rand = { version = "0.8", optional = true}
bzip2 = {version = "0.4.4", optional = true}
bit-set = {version = "0.5", optional = true}
bit-set08 = {package="bit-set", version = "0.8", optional = true}
rustc-hash = {version = "1.1", optional = true}
memoffset = "0.9"
byteorder = "1.4"
savefile-derive = {path="../savefile-derive", version = "=0.17.13", optional = true }
serde_derive = {version= "1.0", optional = true}
serde = {version= "1.0", optional = true}
quickcheck = {version= "1.0", optional = true}

[dev-dependencies]
savefile-derive = { path="../savefile-derive", version = "=0.17.13" }

[build-dependencies]
rustc_version="0.2"



